
CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
PROJECT(pidsig C)

INCLUDE(CheckIncludeFile)

SET(PACKAGE_VERSION_MAJOR 0)
SET(PACKAGE_VERSION_MINOR 9)
SET(PACKAGE_VERSION "${PACKAGE_VERSION_MAJOR}.${PACKAGE_VERSION_MINOR}")

ADD_EXECUTABLE(pidsig
  pidsig.c
  pidsig.h
)

CHECK_INCLUDE_FILE(stdlib.h HAVE_STDLIB_H)
CHECK_INCLUDE_FILE(string.h HAVE_STRING_H)
CHECK_INCLUDE_FILE(unistd.h HAVE_UNISTD_H)
CHECK_INCLUDE_FILE(sys/types.h HAVE_SYS_TYPES_H)
CHECK_INCLUDE_FILE(sys/wait.h HAVE_SYS_WAIT_H)
CHECK_INCLUDE_FILE(signal.h HAVE_SIGNAL_H)
CHECK_INCLUDE_FILE(pwd.h HAVE_PWD_H)
CHECK_INCLUDE_FILE(fcntl.h HAVE_FCNTL_H)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/pidsig.h.in ${CMAKE_CURRENT_BINARY_DIR}/pidsig.h)

INSTALL(PROGRAMS
  pidsig
  DESTINATION bin)
